finalise conclusions + add abstract

--- a/paper.bib
+++ b/paper.bib
@@ -86,3 +86,25 @@
 	author = {Fornara, Nicoletta and Rodríguez-Doncel, Víctor and Esteves, Beatriz and Steyskal, Simon and Smith, Benedict Whittam},
 	year = {2024},
 }
+
+@inproceedings{panditCreatingVocabularyData2019,
+  title = {Creating {{A Vocabulary}} for {{Data Privacy}}},
+  booktitle = {The 18th {{International Conference}} on {{Ontologies}}, {{DataBases}}, and {{Applications}} of {{Semantics}} ({{ODBASE2019}})},
+  author = {Pandit, Harshvardhan J. and Polleres, Axel and Bos, Bert and Brennan, Rob and Bruegger, Bud and Ekaputra, Fajar J and Fern{\'a}ndez, Javier D and Hamed, Roghaiyeh Gachpaz and Lizar, Mark and Schlehahn, Eva and Steyskal, Simon and Wenning, Rigo},
+  year = {2019},
+  pages = {17},
+  address = {{Rhodes, Greece}},
+  doi = {10/ggwx7x},
+  abstract = {Managing privacy and understanding handling of personal data has turned into a fundamental right, at least within the European Union, with the General Data Protection Regulation (GDPR) being enforced since May 25th 2018. This has led to tools and services that promise compliance to GDPR in terms of consent management and keeping track of personal data being processed. The information recorded within such tools, as well as that for compliance itself, needs to be interoperable to provide sufficient transparency in its usage. Additionally, interoperability is also necessary towards addressing the right to data portability under GDPR as well as creation of user-configurable and manageable privacy policies. We argue that such interoperability can be enabled through agreement over vocabularies using linked data principles. The W3C Data Privacy Vocabulary and Controls Community Group (DPVCG) was set up to jointly develop such vocabularies towards interoperability in the context of data privacy. This paper presents the resulting Data Privacy Vocabulary (DPV), along with a discussion on its potential uses, and an invitation for feedback and participation.},
+  copyright = {All rights reserved},
+  langid = {english},
+  file = {/home/harsh/Zotero/storage/XI8D29IG/Pandit et al. - Creating A Vocabulary for Data Privacy.pdf}
+}
+
+@inproceedings{pandit2024implementing,
+  title={Implementing ISO/IEC TS 27560: 2023},
+  author={Pandit, Harshvardhan J and Lindquist, Jan and Krog, Georg P},
+  booktitle={Privacy Technologies and Policy: 12th Annual Privacy Forum, APF 2024, Karlstad, Sweden, September 4--5, 2024, Proceedings},
+  pages={228},
+  organization={Springer Nature}
+}
