Updates from Overleaf

--- a/paper.bib
+++ b/paper.bib
@@ -102,7 +102,7 @@
 }
 
 @inproceedings{pandit2024implementing,
-  title={Implementing ISO/IEC TS 27560: 2023},
+  title={{Implementing ISO/IEC TS 27560:2023 Consent Records and Receipts for GDPR and DGA}},
   author={Pandit, Harshvardhan J and Lindquist, Jan and Krog, Georg P},
   booktitle={Privacy Technologies and Policy: 12th Annual Privacy Forum, APF 2024, Karlstad, Sweden, September 4--5, 2024, Proceedings},
   pages={228},
